tests/semantic_analysis/error/continue_outside.c
continue_outside\.c:3:2: error:.*